--- a/angular.json
+++ b/angular.json
@@ -92,7 +92,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "public/_redirects"
+              "src/_redirects"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
